# jumia-deals-viewer

./: .gitignore  Dockerfile  Dockerfile.airflow  Makefile  README-V2.md  README.md  airflow.sh  app.py  docker-compose.yml  get_scraper_data.py  pyproject.toml  railway.json  requirements.txt  scrapy.cfg  tasks.md
blueprints/: get_deals.py
dags/: jumia_scraper_dag.py
frontend/: bun.lockb  package.json
frontend/app/: page.tsx
frontend/components/: deals-viewer.tsx
frontend/lib/: fetchData.ts
jumiaScraper/: items.py  pipelines.py  settings.py
jumiaScraper/spiders/: deals_spider.py
sample/: deals_spider.py  getScraperData.py  items.py
src/backend/: app.py
src/backend/templates/: index.html.j2
src/deal_scraper/: pipelines.py  settings.py
src/deal_scraper/spiders/: jumia.py
src/jumia_deals_viewer/: Dockerfile  __init__.py
src/jumia_deals_viewer/backend/: app.py
src/jumia_deals_viewer/backend/templates/: base.html.j2  index.html.j2
src/jumia_deals_viewer/deal_scraper/: items.py  pipelines.py  settings.py
templates/: base.html.j2  healthcheck.html.j2  index.html.j2
