[tool.poetry]
name = "jumia-deals-viewer"
version = "0.1.0"
description = "An application for viewing deals on offer at jumia.co.ke."
authors = ["Antony Nyagah <tony.m.nyagah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
Scrapy = "^2.11.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
