[tool.poetry]
name = "jumia-deals-viewer"
version = "0.1.0"
description = "An application for viewing deals on offer at jumia.co.ke."
authors = ["Antony Nyagah <tony.m.nyagah@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pandas = "^2.2.1"
jupyterlab = "^4.1.5"
Scrapy = "^2.11.1"
uvicorn = "^0.29.0"
flask = "^3.0.3"
flask-cors = "^4.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "app:main"
