[project]
name = "jumia-deals-viewer"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "scrapy>=2.11.2",
    "streamlit>=1.38.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jumia_deals_viewer"]
